...
            android:layout_below="@+id/topLabel"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="66dp" />

        <Button
            android:id="@+id/buttonOk"
            android:layout_width="191dp"
            android:layout_height="50dp"
            android:text="Logout"
            tools:layout_editor_absoluteY="371dp"
            tools:layout_editor_absoluteX="191dp"
            android:layout_alignBaseline="@+id/buttonCancel"
            android:layout_alignBottom="@+id/buttonCancel"
            android:layout_toRightOf="@+id/buttonCancel"
            android:layout_toEndOf="@+id/buttonCancel" />
...
