...
        android:title="View Messages"
        app:showAsAction="never" />
    //Creates a logout button in the drop down menu
    <item
        android:id="@+id/logout_settings"
        android:orderInCategory="3"
        android:title="Log Out"
        app:showAsAction="never"/>

</menu>
