...
            android:layout_height="wrap_content"
            android:text="LogOut Google Account"
            android:id="@+id/sign_out_button"
            android:layout_alignParentBottom="true"/>

        <com.google.android.gms.common.SignInButton
            android:id="@+id/sign_in_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"/>

    </RelativeLayout>

...
